<resources>
    <string name="app_name">Homework1</string>
    <string name="backspace">Delete</string>
    <string name="speeddial1">*</string>
    <string name="speeddial2">*</string>
    <string name="speeddial3">*</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>
    <string name="numbersign">#</string>
    <string name="plussign">+</string>
    <string name="callbutton">Call</string>
    <string name="phoneInput">Phone Number</string>
    <string name="sdName">Name:</string>
    <string name="sdNumber">Number:</string>
    <string name="saveB">Save</string>
    <string name="cancelB">Cancel</string>


</resources>