<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#0B0B0B"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#434343"
        android:onClick="buttonClickEvent"
        android:paddingStart="23dp"
        app:icon="@android:drawable/ic_input_delete"
        app:iconGravity="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/phoneInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/phoneInput" />

    <Button
        android:id="@+id/speeddial1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/speeddial1"
        app:layout_constraintEnd_toStartOf="@+id/speeddial2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

    <Button
        android:id="@+id/speeddial2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/speeddial2"
        app:layout_constraintBaseline_toBaselineOf="@+id/speeddial1"
        app:layout_constraintEnd_toStartOf="@+id/speeddial3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/speeddial1" />

    <Button
        android:id="@+id/speeddial3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/speeddial3"
        app:layout_constraintBaseline_toBaselineOf="@+id/speeddial2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/speeddial2" />

    <Button
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number1"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speeddial1" />

    <Button
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number2"
        app:layout_constraintBaseline_toBaselineOf="@+id/number1"
        app:layout_constraintEnd_toStartOf="@+id/number3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number1" />

    <Button
        android:id="@+id/number3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number3"
        app:layout_constraintBaseline_toBaselineOf="@+id/number2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number2" />

    <Button
        android:id="@+id/number4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number4"
        app:layout_constraintEnd_toStartOf="@+id/number5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number1" />

    <Button
        android:id="@+id/number5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number5"
        app:layout_constraintBaseline_toBaselineOf="@+id/number4"
        app:layout_constraintEnd_toStartOf="@+id/number6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number4" />

    <Button
        android:id="@+id/number6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number6"
        app:layout_constraintBaseline_toBaselineOf="@+id/number5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number5" />

    <Button
        android:id="@+id/number7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number7"
        app:layout_constraintEnd_toStartOf="@+id/number8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number4" />

    <Button
        android:id="@+id/number8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number8"
        app:layout_constraintBaseline_toBaselineOf="@+id/number7"
        app:layout_constraintEnd_toStartOf="@+id/number9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number7" />

    <Button
        android:id="@+id/number9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number9"
        app:layout_constraintBaseline_toBaselineOf="@+id/number8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number8" />

    <Button
        android:id="@+id/plusbutton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/plussign"
        app:layout_constraintEnd_toStartOf="@+id/number0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number7" />

    <Button
        android:id="@+id/number0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/number0"
        app:layout_constraintBaseline_toBaselineOf="@+id/plusbutton"
        app:layout_constraintEnd_toStartOf="@+id/numberhash"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plusbutton" />

    <Button
        android:id="@+id/numberhash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#838383"
        android:onClick="buttonClickEvent"
        android:text="@string/numbersign"
        app:layout_constraintBaseline_toBaselineOf="@+id/number0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number0" />

    <Button
        android:id="@+id/call"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#4CAF50"
        android:onClick="buttonClickEvent"
        android:text="@string/callbutton"
        app:icon="@android:drawable/stat_sys_phone_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plusbutton" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/phoneInput"
        android:inputType="none"
        android:minHeight="48dp"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toStartOf="@+id/backspace"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>